# thrustfucker

./: .gitignore  README.md  index.html  package-lock.json  package.json  settings.json  vite.config.js
electron/: main.js  preload.js
firmware/: CMakeLists.txt  build.ps1  stm32f446xx.ld
firmware/src/: config.h  main.c  main_b.c  main_c.c  main_d.c  main_e.c  main_f.c  startup_stm32f446xx.s  stm32f4xx_hal_conf.h  system_stm32f4xx.c
firmware/src/duckyscript/: duckyscript.c  duckyscript.h
firmware/src/net/: net_app.c  net_app.h
firmware/src/usb/: hid_app.c  hid_app.h  msc_app.c  msc_app.h  ramdisk.c  ramdisk.h  tusb_config.h  usb_descriptors.c
re/: README.md  REVERSE_ENGINEERING.md
re/analysis/: 01_structure.py  02_disasm.py  02_usb.py  03_disasm.py  03_funcs.py  03b_debug.py  03c_gpio.py  03d_gpio.py  03e_context.py  03f_gpioapi.py  04_helpers.py  04_init_context.py  04b_init.py  05_adc.py  05_i2c.py  06_gpioinit.py  06_i2c_irq.py  07_calibration.py  07_dma.py  07_i2c_device.py  07_spi.py  08_spi_buttons.py  ExtractPeripherals.java  all_gpio_af.py  check_pb10_ck.py  decompiled_periph.c  find_af5_gpio.py  find_spi_pins.py  ghidra_extract_out.txt  ghidra_functions.py  ghidra_periph_out.txt  pb10_context.py  read_constants.py  read_spi_const.py  spi2_gpio.py  spi2_pins.py  spi_msp_init.py
re/scripts/: Read-DfuDescriptors.ps1
src/: App.jsx  main.jsx
src/components/: CheatSheet.jsx  Configurator.jsx  FlashWizard.jsx  MappingWizard.jsx  ModeGrid.jsx  PayloadLibrary.jsx  RestoreBar.jsx  Settings.jsx  StickDashboard.jsx  TitleBar.jsx  TriggerMapper.jsx
src/components/SidestickPanel/: SidestickPanel.css  SidestickPanel.jsx  buttons.js
src/data/: modes.js  payloadLibrary.js  payloads.js
src/styles/: global.css
tools/: decrypt_chrome.py
